# Thrift

./: readme.md
image_demo/: .gitignore  CMakeLists.txt  DataFlow.thrift  Dtype.thrift  readme.md
image_demo/cpp/: CMakeLists.txt  Classification_server.skeleton.cpp  CppClient.cpp  CppServer.cpp  ktimer.h
image_demo/py/: Client.py  Server.py  ktimer.py
thrift_demo/: .gitignore  CMakeLists.txt  readme.md
thrift_demo/cpp/: CMakeLists.txt  CppClient.cpp  CppServer.cpp
thrift_demo/py/: Client.py  Server.py
